--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="start">start</string>
     <string name="serverXO">XO/server</string>
     <string name="xo_server_local">xoserver.duckdns.org</string>
+    <string name="connect">connect</string>
+    <string name="connecting">connecting</string>
+    <string name="seeking_opponent">Seeking opponent...</string>
+    <string name="emptyCell">\?</string>
 </resources>
