--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,10 @@
     <string name="your_opponent_s_turn">Your opponent\'s turn...</string>
     <string name="start">start</string>
     <string name="serverXO">XO/server</string>
-    <string name="xo_server_local">xoserver.duckdns.org</string>
+    <string name="xo_server">xoserver.duckdns.org</string>
     <string name="connect">connect</string>
     <string name="connecting">connecting</string>
+    <string name="starting">starting</string>
     <string name="seeking_opponent">Seeking opponent...</string>
     <string name="emptyCell">\?</string>
 </resources>
